--- a/neovim/Dockerfile
+++ b/neovim/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Gianluca Arbezzano <gianarb92@gmail.com>
 
 RUN apt-get update
 RUN apt-get install -y build-essential openssl curl wget cmake \
-    pkg-config libtool automake unzip git
+    pkg-config libtool automake unzip git python-pip python-pip3
 
 WORKDIR /tmp
 RUN wget https://github.com/neovim/neovim/archive/nightly.tar.gz
@@ -25,6 +25,10 @@ RUN unzip ./dotfiles.zip
 WORKDIR dotfiles-master
 RUN make vim
 
+RUN pip3 install neovim
+RUN pip3 install neovim
+
+RUN nvim +PlugInstall +qall
 WORKDIR /project
 
 CMD ["nvim", "-v"]
