Move latest on nightly build

--- a/influxdb/latest/Dockerfile
+++ b/influxdb/latest/Dockerfile
@@ -1,14 +1,21 @@
 FROM ubuntu
 MAINTAINER Gianluca Arbezzano <gianarb92@gmail.com>
 
+ENV INFLUXDB_CONF=/etc/influxdb_conf.toml
+
 RUN apt-get update
 RUN apt-get install -y wget
-RUN wget http://s3.amazonaws.com/influxdb/influxdb_latest_amd64.deb
-RUN dpkg -i influxdb_latest_amd64.deb
 
-RUN rm /influxdb_latest_amd64.deb
+RUN wget https://s3.amazonaws.com/influxdb/influxdb_0.10.0-1_amd64.deb
+RUN wget https://s3.amazonaws.com/influxdb/influxdb_nightly_amd64.deb
+RUN sudo dpkg -i influxdb_nightly_amd64.deb
+RUN rm influxdb_nightly_amd64.deb
 
 EXPOSE 8083
 EXPOSE 8086
 
-ENTRYPOINT ["/usr/bin/influxdb"]
+ADD ./run.sh ./run.sh
+RUN chmod 755 ./run.sh
+ADD ./influxdb_conf.toml $INFLUXDB_CONF
+
+ENTRYPOINT ["./run.sh"]
