Fixed chronograf executable

--- a/chronograf/0.10.0/Dockerfile
+++ b/chronograf/0.10.0/Dockerfile
@@ -9,4 +9,4 @@ ADD ./chronograf.toml /chronograf.toml
 
 EXPOSE 10000
 
-CMD ["chronograf", "-config=/chronograf.toml"]
+CMD ["/opt/chronograf/chronograf", "-config=/chronograf.toml"]
