--- a/influxdb/0.10.2/Dockerfile
+++ b/influxdb/0.10.2/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update
 RUN apt-get install -y wget
 
 RUN wget https://s3.amazonaws.com/influxdb/influxdb_0.10.2-1_amd64.deb
-RUN sudo dpkg -i influxdb_0.10.2-1_amd64.deb
+RUN dpkg -i influxdb_0.10.2-1_amd64.deb
 RUN rm influxdb_0.10.2-1_amd64.deb
 
 EXPOSE 8083
