Use docker as base image
This provides a docker binary out of the box.

--- a/jenkins/2.0/Dockerfile
+++ b/jenkins/2.0/Dockerfile
@@ -5,7 +5,7 @@
 #   --name jenkins
 #
 
-FROM alpine:latest
+FROM docker
 MAINTAINER Gianluca Arbezzano <gianarb92@gmail.com>
 
 ENV JENKINS_HOME /var/jenkins
