--- a/chronograf/0.10.0/chronograf.toml
+++ b/chronograf/0.10.0/chronograf.toml
@@ -1,5 +1,5 @@
 Bind = "0.0.0.0:10000"
-LocalDatabase = "/data/chronograf.db"
+LocalDatabase = "/opt/chronograf.db"
 QueryResponseBytesLimit = 2500000
 
 # DSN to connect to MySQL for storing Chronograf application data.
